<resources>
    <string name="app_name">Recipish</string>
    <string name="title_home">Home</string>
    <string name="title_saved">Saved</string>
    <string name="title_recipes">Recipes</string>
    <string name="recipe_image">Recipe image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="appetizer">Appetizer</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="dessert">Dessert</string>
    <string name="african">African</string>
    <string name="middle_eastern">Middle Eastern</string>
    <string name="cuisines">Cuisines</string>
    <string name="european">European</string>
    <string name="chinese">Chinese</string>
    <string name="japanese">Japanese</string>
    <string name="thai">Thai</string>
    <string name="mexican">Mexican</string>
    <string name="indian">Indian</string>
    <string name="british">British</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="salad">Salad</string>
    <string name="drink">Drink</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="snack">Snack</string>
    <string name="bread">Bread</string>
    <string name="search">Search</string>
    <string name="save_recipe">Save recipe</string>
    <string name="recipish">Recipish</string>
</resources>