<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.food_recipes.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_recipes"
            app:destination="@id/navigation_recipes">
        </action>
        <action
            android:id="@+id/action_navigation_home_to_recipeDetailsActivity"
            app:destination="@id/recipeDetailsActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.food_recipes.ui.saved.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved">
        <action
            android:id="@+id/action_navigation_saved_to_recipeDetailsActivity"
            app:destination="@id/recipeDetailsActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.food_recipes.ui.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes">
        <action
            android:id="@+id/action_navigation_recipes_to_recipesDialogSheet"
            app:destination="@id/recipesDialogSheet" />

        <argument
            android:name="returnFromRecipeOptionsDialog"
            android:defaultValue="false"
            app:argType="boolean" />

        <argument
            android:name="searchValueFromHome"
            android:defaultValue=""
            app:argType="string" />


        <action
            android:id="@+id/action_navigation_recipes_to_recipeDetailsActivity"
            app:destination="@id/recipeDetailsActivity" />
    </fragment>
    <dialog
        android:id="@+id/recipesDialogSheet"
        android:name="com.example.food_recipes.ui.recipes.RecipesOptionsDialog"
        android:label="recipes_options_dialog"
        tools:layout="@layout/recipes_options_dialog">
        <action
            android:id="@+id/action_recipesDialogSheet_to_navigation_recipes"
            app:destination="@id/navigation_recipes"
            app:popUpTo="@id/navigation_recipes"
            app:popUpToInclusive="true" />
    </dialog>
    <activity
        android:id="@+id/recipeDetailsActivity"
        android:name="com.example.food_recipes.ui.recipes.RecipeDetailsActivity"
        android:label="RecipeDetails"
        tools:layout="@layout/activity_recipe_details">
        <argument
            android:name="recipe"
            app:argType="com.example.food_recipes.core.datamodels.Recipe" />
    </activity>
</navigation>