<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/logo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/recipish"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/montserrat"
        android:text="Hello Mohamed"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/montserrat"
        android:text="Discover your favourite food recipes."
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="18dp"
        android:hint="Search recipes"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/orange"
        app:boxStrokeColor="@color/orange"
        app:boxCornerRadiusBottomEnd="14dp"
        app:boxCornerRadiusBottomStart="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        app:boxCornerRadiusTopStart="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:placeholderText="Search"
        app:startIconDrawable="@drawable/ic_round_search_24"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipeSearchHome_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:alpha="1"
        android:fontFamily="@font/montserrat"
        android:text="Select a category"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:alpha="1"
        android:fontFamily="@font/montserrat"
        android:text="Recipes you might like"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/mainCourse_imageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="6dp"
        android:scaleType="centerCrop"
        android:src="@drawable/main_course"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:fontFamily="@font/montserrat"
        android:text="@string/main_course"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/mainCourse_imageView"
        app:layout_constraintStart_toStartOf="@+id/mainCourse_imageView"
        app:layout_constraintTop_toBottomOf="@+id/mainCourse_imageView" />

    <ImageView
        android:id="@+id/breakfast_imageView"
        android:layout_width="72dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:scaleType="centerInside"
        android:src="@drawable/breakfast"
        app:layout_constraintStart_toEndOf="@+id/mainCourse_imageView"
        app:layout_constraintTop_toTopOf="@+id/mainCourse_imageView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:alpha="0.5"
        android:fontFamily="@font/montserrat"
        android:text="@string/breakfast"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/breakfast_imageView"
        app:layout_constraintStart_toStartOf="@+id/breakfast_imageView"
        app:layout_constraintTop_toBottomOf="@+id/soup_imageView" />

    <ImageView
        android:id="@+id/soup_imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/soup"
        app:layout_constraintStart_toEndOf="@+id/breakfast_imageView"
        app:layout_constraintTop_toTopOf="@+id/mainCourse_imageView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:alpha="0.5"
        android:fontFamily="@font/montserrat"
        android:text="@string/soup"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/soup_imageView"
        app:layout_constraintStart_toStartOf="@+id/soup_imageView"
        app:layout_constraintTop_toBottomOf="@+id/soup_imageView" />

    <ImageView
        android:id="@+id/dessert_imageView"
        android:layout_width="72dp"
        android:layout_height="88dp"
        android:layout_marginStart="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/dessert"
        app:layout_constraintStart_toEndOf="@+id/soup_imageView"
        app:layout_constraintTop_toTopOf="@+id/soup_imageView" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:alpha="0.5"
        android:fontFamily="@font/montserrat"
        android:text="@string/dessert"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/dessert_imageView"
        app:layout_constraintStart_toStartOf="@+id/dessert_imageView"
        app:layout_constraintTop_toBottomOf="@+id/soup_imageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recommendedRecipes_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

</androidx.constraintlayout.widget.ConstraintLayout>